# gem_audit

./: README.md
analysis/codeql/: ExecPrimitives.bqrs  ExecPrimitives.csv  ExecPrimitives.ql  README.md  qlpack.yml
gems/aws-sdk-cloudformation-1.134.0/lib/: aws-sdk-cloudformation.rb
gems/aws-sdk-cloudformation-1.134.0/sig/: client.rbs
gems/aws-sdk-core-3.226.3/lib/: aws-sdk-sso.rb  aws-sdk-ssooidc.rb  aws-sdk-sts.rb
gems/aws-sdk-s3-1.193.0/lib/: aws-sdk-s3.rb
gems/aws-sdk-s3-1.193.0/sig/: client.rbs  (+1 more)
gems/click_house-client-0.5.1/: .gitlab-ci.yml  .rubocop.yml
gems/debug-1.7.1/: exts.mk
gems/gitlab-cloud-connector-1.32.0/: Makefile
gems/gitlab-dangerfiles-4.10.0/: .gitlab-ci.yml
gems/gitlab-exporter-15.6.0/: .gitignore  .gitlab-ci.yml  .rubocop.yml  .rubocop_todo.yml
gems/gitlab-glfm-markdown-0.0.33-x86_64-linux-gnu/ext/glfm_markdown/: Cargo.toml  extconf.rb
gems/gitlab-glfm-markdown-0.0.33-x86_64-linux-gnu/ext/glfm_markdown/src/: glfm.rs  lib.rs  main.rs
gems/gitlab-labkit-0.40.0/: .copier-answers.yml  .editorconfig  .gitlab-ci-asdf-versions.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.json  .rubocop.yml  .rubocop_todo.yml  .tool-versions  CODEOWNERS  Dangerfile
gems/gitlab-mail_room-0.0.27/: .gitlab-ci.yml
gems/gitlab-markup-2.0.0/: .gitlab-ci.yml  CODEOWNERS
gems/gitlab-net-dns-0.15.0/: .gitlab-ci.yml  .rubocop_todo.yml
gems/gitlab-ruby-shadow-2.5.1/: Makefile  extconf.rb
gems/gitlab-security_report_schemas-0.1.3.min15.0.0.max15.2.3/: .rubocop.yml  CODEOWNERS  gem_version  supported_versions
gems/rbs-2.8.2/: exts.mk
(+351 files in other folders)
