[package]
name = "glfm_markdown"
version = "0.0.33"
edition = "2021"
authors = ["digitalmoksha <bwalker@gitlab.com>"]
description = "GitLab Flavored Markdown parser and formatter. 100% CommonMark-compatible. Experimental."
publish = false

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "glfm_markdown"
required-features = ["cli"]

[dependencies]
clap = { version = "=4.4.18", optional = true, features = ["derive", "string"] }
comrak = { version = "0.40.0", default-features = false, features = ["shortcodes"] }
magnus = "0.6.2"
rb-sys = { version = "0.9.86", default-features = false, features = ["stable-api-compiled-fallback"] }
regex = "1.11.1"
lazy_static = "1.5.0"

[features]
cli = ["clap", "comrak/syntect"]
